fixed sidebar overlap

--- a/apps/frontend/src/components/FloorMap/FloorMap.module.css
+++ b/apps/frontend/src/components/FloorMap/FloorMap.module.css
@@ -44,7 +44,7 @@ body {
     min-height: 200px;
     max-height: 200px;
     background: #f1f1f1;
-    margin-top: -620px;/* Adjust this value as needed to control the distance from the top */
+    margin-top: -550px;/* Adjust this value as needed to control the distance from the top */
 }
 
 
